opam-version: "1.2"
maintainer: "ligand@free.fr"
authors: ["Francois BERENGER"]
homepage: "https://github.com/UnixJunkie/orsvm-e1071"
bug-reports: "https://github.com/UnixJunkie/orsvm-e1071/issues"
dev-repo: "git+https://github.com/UnixJunkie/orsvm-e1071.git"
license: "LGPL + linking exception"
build: ["jbuilder" "build" "-p" name "-j" jobs]
depends: ["jbuilder" {build}]
